# harold

./: .gitignore  README.md  harold.cabal
db/: bool  bounded  eq  func  head  lists  maybe  numeric  ord  tuples
src/: Main.hs
src/Harold/: TextOutput.hs
