name:                harold
version:             0.1.0.0
synopsis:            Database of Haskell-related knowledge
description:         
  Database of Haskell functions (with source code), types, classes, modules,
  language pragmas, etc.
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
category:            Development
homepage:            http://github.com/aelve/harold
bug-reports:         http://github.com/aelve/harold/issues
build-type:          Simple
tested-with:         GHC == 7.8.4
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/aelve/harold.git

executable harold
  main-is:             Main.hs
  other-modules:       Harold.TextOutput
  -- other-extensions:    
  build-depends:       base >=4.7 && <5
                     , aeson >=0.7
                     , yaml >=0.8
                     , text
                     , split
                     , mtl
                     , microlens >=0.1.2 && <0.2
                     , microlens-th
                     , filemanip
  hs-source-dirs:      src
  default-language:    Haskell2010
